Revise homepage content for new projects
Updated the content of the homepage to reflect new projects and upcoming features.

--- a/index.html
+++ b/index.html
@@ -23,9 +23,9 @@
 </head>
 <body>
     <div class="kutu">
-        <h1>Merhaba 👋</h1>
-        <p>Bu benim ücretsiz web sitem</p>
-        <p>ChatGPT ile yaptım 🚀</p>
+        <h1>Merhaba </h1>
+        <p>Bu web sitede yeni oyunlarımı sistemlerimi tasarlayacağım</p>
+        <p>Yakında yeni kodlar yayınlanacaktır</p>
     </div>
 </body>
 </html>
