--- a/index.html
+++ b/index.html
@@ -6,9 +6,9 @@
 </head>
 <body>
 
-    <h1>🚀 Hoş geldin!</h1>
+    <h5> Hoş geldin!</h5>
     <p>Bu site hazırlanıyor.</p>
-    <p>Python öğreniyorum 🐍</p>
-
+    <p>Yakında açılacaktır<p>
+    <p>From Yiğit Çelebican</p>
 </body>
 </html>
