--- a/index.html
+++ b/index.html
@@ -6,9 +6,9 @@
 </head>
 <body>
 
-    <h5> Hoş geldin!</h5>
-    <p>Bu site hazırlanıyor.</p>
-    <p>Yakında açılacaktır<p>
-    <p>From Yiğit Çelebican</p>
+    <h1 style="font-size: 50px;">Hoş geldin!</h1>5>
+    <p style="font-size: 30px;">Bu site hazırlanıyor.</p>
+    <p style="font-size: 30px;">Yakında açılacaktır<p>
+    <p style="font-size: 30px;">From Yiğit Çelebican</p>
 </body>
 </html>
