Fix header tag formatting in index.html

--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
 </head>
 <body>
 
-    <h1 style="font-size: 24pxpx;">Hoş geldin!</h1>5>
+    <h1 style="font-size: 24pxpx;">Hoş geldin!</h1>
     <p style="font-size: 16px;">Bu site hazırlanıyor.</p>
     <p style="font-size: 16px;">Yakında açılacaktır<p>
     <p style="font-size: 16px;">From Yiğit Çelebican</p>
