--- a/index.html
+++ b/index.html
@@ -6,7 +6,16 @@
 </head>
 <body>
 
-    <h1 style="font-size: 24pxpx;">Hoş geldin!</h1>
+   <style>
+body {
+    background-image: url("background.png");
+    background-size: cover;
+    background-repeat: no-repeat;
+    background-position: center;
+}
+</style>
+    
+    <h1 style="font-size: 24px;">Hoş geldin!</h1>
     <p style="font-size: 16px;">Bu site hazırlanıyor.</p>
     <p style="font-size: 16px;">Yakında açılacaktır<p>
 </body>
