--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
    <style>
 body {
     background-image: url("background.png");
-    background-size: cover;
+    background-size: contain;
     background-repeat: no-repeat;
     background-position: center;
 }
