--- a/index.html
+++ b/index.html
@@ -12,6 +12,7 @@ body {
     background-size: contain;
     background-repeat: no-repeat;
     background-position: center;
+    min-height: 100vh;
 }
 </style>
     
