--- a/index.html
+++ b/index.html
@@ -11,13 +11,14 @@ body {
     background-image: url("background.png");
     background-size: contain;
     background-repeat: no-repeat;
-    background-position: center;
+    background-position: center 20%;
     min-height: 100vh;
+    color: white;
 }
 </style>
     
     <h1 style="font-size: 24px;">Hoş geldin!</h1>
     <p style="font-size: 16px;">Bu site hazırlanıyor.</p>
-    <p style="font-size: 16px;">Yakında açılacaktır<p>
-</body>
+    <p style="font-size: 16px;">Yakında açılacaktır
+
 </html>
