Add margin to body style in index.html

--- a/index.html
+++ b/index.html
@@ -8,6 +8,7 @@
 
    <style>
 body {
+    margin: 0;
     background-image: url("background.png");
     background-size: contain;
     background-repeat: no-repeat;
