--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
 body {
     margin: 0;
     background-image: url("background.png");
-    background-size: contain;
+    background-size: cover;
     background-repeat: no-repeat;
     background-position: center 20%;
     min-height: 100vh;
@@ -18,8 +18,9 @@ body {
 }
 </style>
     
-    <h1 style="font-size: 24px;">Hoş geldin!</h1>
-    <p style="font-size: 16px;">Bu site hazırlanıyor.</p>
-    <p style="font-size: 16px;">Yakında açılacaktır
-
+    <h1 style="font-size: 24px;">     Hoş geldin!</h1>
+    <p style="font-size: 16px;">     Bu site hazırlanıyor.</p>
+    <p style="font-size: 16px;">     Yakında açılacaktır
+    </p>
+</body>
 </html>
