Add alert script and style to index.html

--- a/index.html
+++ b/index.html
@@ -3,10 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <title>Yigit54437Celo</title>
-</head>
-<body>
-
-   <style>
+      <style>
 body {
     margin: 0;
     background-image: url("background.png");
@@ -17,6 +14,13 @@ body {
     color: white;
 }
 </style>
+    <script>
+        alert("Yiğit ÇELEBİCAN PAŞAAAAA!!!!");
+    </script>
+</head>
+<body>
+
+ 
     
     <h1 style="font-size: 24px;">     Hoş geldin!</h1>
     <p style="font-size: 16px;">     Bu site hazırlanıyor.</p>
