Add script to log message on submit button click

--- a/index.html
+++ b/index.html
@@ -14,10 +14,13 @@ body {
     color: white;
 }
 </style>
-
+<script>
+    test(){
+        console.log("Log yazıyorum");    }
+</script>
 </head>
 <body>
-
+<submit onclick="test()">Gönder</submit>
  
     
     <h1 style="font-size: 24px;">     Hoş geldin!</h1>
